--- a/index.html
+++ b/index.html
@@ -1,9 +1,170 @@
-<!DOCTYPE Public "-https://apple.com/dtds/PropertyList.dtd" "-https://w3.com/xhtml/en/transitional.dtd">
-<html dir="ltr" font-family="Ubuntu Mono">
-<head><meta http5-equiv-keyword="ti dj eban"></meta></head>
-<body bg-color="blue">
-<form type="sumbit" input="button">
-<font family="Times" color="red">
-<p>DAROVA BLIAD</p>
-</font></form></body>
+<!doctype html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, maximum-scale=1">
+
+	<title>Cs Cheat Check</title>
+	<link rel="icon" href="favicon.png" type="image/png">
+	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
+
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,800italic,700italic,600italic,400italic,300italic,800,700,600' rel='stylesheet' type='text/css'>
+
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href="css/font-awesome.css" rel="stylesheet" type="text/css">
+	<link href="css/responsive.css" rel="stylesheet" type="text/css">
+	<link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
+	<link href="css/animate.css" rel="stylesheet" type="text/css">
+
+	<script type="text/javascript" src="js/jquery.1.8.3.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/jquery-scrolltofixed.js"></script>
+	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/jquery.isotope.js"></script>
+	<script type="text/javascript" src="js/wow.js"></script>
+	<script type="text/javascript" src="js/classie.js"></script>
+	<script type="text/javascript" src="js/magnific-popup.js"></script>
+
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+		ym(52689316, "init", {
+		 	clickmap:true,
+		 	trackLinks:true,
+		 	accurateTrackBounce:true
+		});
+ 	</script>
+ 	<noscript><div><img src="https://mc.yandex.ru/watch/52689316" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ 	<!-- /Yandex.Metrika counter -->
+
+</head>
+
+<body>
+	<header class="header" id="header">
+		<!--header-start-->
+		<div class="container">
+			<figure class="logo animated fadeInDown delay-07s">
+				<a href="#"><img src="img/logo.png" alt=""></a>
+			</figure>
+			<h1 class="animated fadeInDown delay-07s">Вызвали на проверку?</h1>
+			<ul class="we-create animated fadeInUp delay-1s">
+				<li>Вам нечего бояться, если вы не используете сторонний софт в игре! Наша программа позволит проверить ваш ПК на наличие читов.</li>
+			</ul>
+			<a class="link animated fadeInUp delay-1s servicelink" href="#">Скачать</a>
+			<a class="link2 animated fadeInUp delay-1s servicelink" href="#service">Подробнее</a>
+		</div>
+	</header>
+	<!--header-end-->
+
+	<nav class="main-nav-outer" id="test">
+		<!--main-nav-start-->
+		<div class="container">
+			<ul class="main-nav">
+				<li><a href="#header">Главная</a></li>
+				<li><a href="#service">Преимущества</a></li>
+				<li><a href="#footer">Контакты</a></li>
+			</ul>
+			<a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
+		</div>
+	</nav>
+	<!--main-nav-end-->
+
+
+
+	<section class="main-section" id="service">
+		<!--main-section-start-->
+		<div class="container">
+			<h2>Преимущества</h2>
+			<h6>Мы стремимся к эффективности, не забывая про приватность ваших данных.</h6>
+			<div class="row">
+				<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-bolt"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>эффективность &amp; скорость</h3>
+							<p>Мы обеспечиваем максимальную скорость и эффективность проверки.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-shield"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Надежность</h3>
+							<p>Мы не собираем и не храним ваши личные даненые.</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-archive"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>компакность</h3>
+							<p>Программа весит не более 50мб и не требует установки, все в одном файле!</p>
+						</div>
+					</div>
+					<div class="service-list">
+						<div class="service-list-col1">
+							<i class="fa fa-medkit"></i>
+						</div>
+						<div class="service-list-col2">
+							<h3>Поддержка</h3>
+							<p>Мы всегда будем рады вам помочь!</p>
+						</div>
+					</div>
+				</div>
+				<figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+					<img src="img/macbook-pro.png" alt="">
+				</figure>
+
+			</div>
+		</div>
+	</section>
+	<!--main-section-end-->
+
+	<footer class="footer" id="footer">
+		<div class="container">
+			<div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
+			<span class="copyright">&copy; CS Cheat Check. All Rights Reserved</span>
+			<ul class="social-link">
+				<li class="facebook"><a href="https://vk.com/folkidevv"><i class="fa fa-vk"></i></a></li>
+				<li class="twitter"><a href="#"><i class="fa fa-telegram"></i></a></li>
+			</ul>
+		</div>
+	</footer>
+
+
+	<script type="text/javascript">
+		$(window).load(function() {
+
+			$('.main-nav li a, .servicelink').bind('click', function(event) {
+				var $anchor = $(this);
+
+				$('html, body').stop().animate({
+					scrollTop: $($anchor.attr('href')).offset().top - 102
+				}, 1500, 'easeInOutExpo');
+				/*
+				if you don't want to use the easing effects:
+				$('html, body').stop().animate({
+					scrollTop: $($anchor.attr('href')).offset().top
+				}, 1000);
+				*/
+				if ($(window).width() < 768) {
+					$('.main-nav').hide();
+				}
+				event.preventDefault();
+			});
+		})
+	</script>
+
+</body>
+
 </html>
