--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 		<div class="container">
 			<div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
 			<span class="copyright">&copy; CS Cheat Check. All Rights Reserved</span>
-				<li class="twitter"><a href="#"><i class="fa fa-telegram"></i></a></li>
+				<li class="twitter"><a href="https://www.youtube.com/channel/UCZYlptJ7SqWnb_sxDoQGc4w?view_as=subscriber"><i class="fa fa-telegram"></i></a></li>
+                                <li class="vk"><a href="https://discord.gg/R5VFxns"><i class="fa fa-vk"></i></a></li>
 			</ul>
 		</div>
 	</footer>
