--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, maximum-scale=1">
 
 	<title>Cs Cheat Check</title>
+	<title>Сайт слитый пользователем EHOT_3ADROT и 武士#4807</title>
 	<link rel="icon" href="favicon.png" type="image/png">
 	<link rel="shortcut icon" href="favicon.ico" type="img/x-icon">
 
