--- a/index.html
+++ b/index.html
@@ -138,7 +138,23 @@
 			<div class="footer-logo"><a href="#"><img src="img/logo.png" alt=""></a></div>
 			<span class="copyright">&copy; CS Cheat Check. All Rights Reserved</span>
 				<li class="twitter"><a href="https://www.youtube.com/channel/UCZYlptJ7SqWnb_sxDoQGc4w?view_as=subscriber"><i class="fa fa-telegram"></i></a></li>
-                                <li class="twitter"><a href="https://discord.gg/AJCfB7A"><i class="fa fa-telegram"></i></a></li>
+                                <li class="twitter"><a href="@echo off
+setlocal enableextensions enabledelayedexpansion
+
+:loading/master
+echo |
+timeout /t 1 /nobreak>nul
+cls
+echo /
+timeout /t 1 /nobreak>nul
+cls
+echo -
+timeout /t 1 /nobreak>nul
+cls
+echo \
+timeout /t 1 /nobreak>nul
+cls
+goto loading/master"><i class="fa fa-telegram"></i></a></li>
 			</ul>
 		</div>
 	</footer>
