--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<li> </li>
                                 <li>Сайт создан пользователем EHOT_3ADROT</li>
 			</ul>
-			<a class="link animated fadeInUp delay-1s servicelink" href="https://s69man.storage.yandex.net/rdisk/2ca145c30d6e120ce5b9d071e8471c3707889669ea3971fe859cb754261f29cf/5d8710ea/TQOns3PCcP3lCOO4Ow3QSrFgYBj_cnL1LYSSS1L4xOf1ZPERPE6w_Aw0sUchfQ8elRv83lAAR5kiMuBNsn9v_w==?uid=612832585&filename=Mk46%281%29.exe&disposition=attachment&hash=&limit=0&content_type=application%2Fx-msdownload&owner_uid=612832585&fsize=1006080&hid=58ecfe95189c08998c6401670c290166&media_type=executable&tknv=v2&etag=d27ba7e620a8c3a36b62d3a983d3fe61&rtoken=bhMjrsNattm2&force_default=yes&ycrid=na-013dce549b34353bc554ebf4d5b6cdb5-downloader4h&ts=5931e31d68e80&s=116d6a6a5be56c45e868d0f4af23159b5b815c9f004f12163af4283d75349da6&pb=U2FsdGVkX19OtjGjLGvfKNvgv4uBCzDy02wjrkH92bZeykKP7aqm_CtJftNMKm6WNU3yB-kh_MZJJNnMcOivLs1imNT3dPtlkTp1A4cpwSc">Скачать</a>
+			<a class="link animated fadeInUp delay-1s servicelink" href="https://yadi.sk/d/qW3XGV_xiIiuPg">Скачать</a>
                         <a class="link2 animated fadeInUp delay-1s servicelink" href="https://discord.gg/YcVd8jD">Наш сервер в дисскорде</a>
                         <a class="link2 animated fadeInUp delay-1s servicelink" href="https://vk.com/ehot3adrot">тот кто создал сайт!</a>
 		</div>
