--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 </head>
 
 <body>
+<p id="demo"></p>
+
+<script>
+function getRandomizer(bottom, top) {
+    return function() {
+        return Math.floor( Math.random() * ( 1 + top - bottom ) ) + bottom;
+    }
+}
+var rollDie = getRandomizer( 100, 200 );
+
+var results = ""
+for ( var i = 0; i<1000; i++ ) {
+    results += rollDie() + " ";    //make a string filled with 1000 random numbers in the range 1-6.
+}
+document.getElementById("demo").innerHTML = rollDie();
+</script>
 	<header class="header" id="header">
 		<!--header-start-->
 		<div class="container">
