--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 </head>
 
 <body>
+<div style="height: 30px; background: url(https://uguide.ru/js/script/girlianda_uguide_ru_1.gif) repeat-x 100%;"></div>
 	<header class="header" id="header">
 		<!--header-start-->
 		<div class="container">
