--- a/index.html
+++ b/index.html
@@ -400,6 +400,8 @@ document.getElementById("demo").innerHTML += rollDie();
 			});
 		})
 	</script>
+let d = new Date();
+document.body.innerHTML = "<h1>Time right now is:  " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds()
 
 </body>
 
