--- a/index.html
+++ b/index.html
@@ -129,164 +129,7 @@
 					<img src="img/macbook-pro.png" alt="">
 				</figure>
 <style>
-@keyframes rainbow-text {
-  0% {
-    color: #e87d7d;
-  }
-  2% {
-    color: #e88a7d;
-  }
-  4% {
-    color: #e8977d;
-  }
-  6% {
-    color: #e8a47d;
-  }
-  8% {
-    color: #e8b07d;
-  }
-  10% {
-    color: #e8bd7d;
-  }
-  12% {
-    color: #e8ca7d;
-  }
-  14% {
-    color: #e8d77d;
-  }
-  16% {
-    color: #e8e47d;
-  }
-  18% {
-    color: #dfe87d;
-  }
-  20% {
-    color: #d3e87d;
-  }
-  22% {
-    color: #c6e87d;
-  }
-  24% {
-    color: #b9e87d;
-  }
-  26% {
-    color: #ace87d;
-  }
-  28% {
-    color: #9fe87d;
-  }
-  30% {
-    color: #92e87d;
-  }
-  32% {
-    color: #86e87d;
-  }
-  34% {
-    color: #7de881;
-  }
-  36% {
-    color: #7de88e;
-  }
-  38% {
-    color: #7de89b;
-  }
-  40% {
-    color: #7de8a8;
-  }
-  42% {
-    color: #7de8b5;
-  }
-  44% {
-    color: #7de8c1;
-  }
-  46% {
-    color: #7de8ce;
-  }
-  48% {
-    color: #7de8db;
-  }
-  50% {
-    color: #7de8e8;
-  }
-  52% {
-    color: #7ddbe8;
-  }
-  54% {
-    color: #7dcee8;
-  }
-  56% {
-    color: #7dc1e8;
-  }
-  58% {
-    color: #7db5e8;
-  }
-  60% {
-    color: #7da8e8;
-  }
-  62% {
-    color: #7d9be8;
-  }
-  64% {
-    color: #7d8ee8;
-  }
-  66% {
-    color: #7d81e8;
-  }
-  68% {
-    color: #867de8;
-  }
-  70% {
-    color: #927de8;
-  }
-  72% {
-    color: #9f7de8;
-  }
-  74% {
-    color: #ac7de8;
-  }
-  76% {
-    color: #b97de8;
-  }
-  78% {
-    color: #c67de8;
-  }
-  80% {
-    color: #d37de8;
-  }
-  82% {
-    color: #df7de8;
-  }
-  84% {
-    color: #e87de4;
-  }
-  86% {
-    color: #e87dd7;
-  }
-  88% {
-    color: #e87dca;
-  }
-  90% {
-    color: #e87dbd;
-  }
-  92% {
-    color: #e87db0;
-  }
-  94% {
-    color: #e87da4;
-  }
-  96% {
-    color: #e87d97;
-  }
-  98% {
-    color: #e87d8a;
-  }
-  100% {
-    color: #e87d7d;
-  }
-}
-.rainbow-text {
-  animation: rainbow-text 1s infinite;
-}
+.box1 {text-shadow: 1px 3px 15px, 2px 4px 5px , 3px 5px 4px black}.box {text-shadow: 1px 3px 12px, 2px 2px 3px , 3px 3px 8px , 3px 3px 3px black}@font-face{font-family:'Montserrat';font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local(Montserrat-Regular),url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format("woff2");unicode-range:U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F}@font-face{font-family:'Montserrat';font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local(Montserrat-Regular),url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format("woff2");unicode-range:U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116}@font-face{font-family:'Montserrat';font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local(Montserrat-Regular),url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format("woff2");unicode-range:U+0102-0103,U+0110-0111,U+1EA0-1EF9,U+20AB}@font-face{font-family:'Montserrat';font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local(Montserrat-Regular),url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format("woff2");unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:'Montserrat';font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local(Montserrat-Regular),url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format("woff2");unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@keyframes rainbow-text{0%{color:#e87d7d}2%{color:#e88a7d}4%{color:#e8977d}6%{color:#e8a47d}8%{color:#e8b07d}10%{color:#e8bd7d}12%{color:#e8ca7d}14%{color:#e8d77d}16%{color:#e8e47d}18%{color:#dfe87d}20%{color:#d3e87d}22%{color:#c6e87d}24%{color:#b9e87d}26%{color:#ace87d}28%{color:#9fe87d}30%{color:#92e87d}32%{color:#86e87d}34%{color:#7de881}36%{color:#7de88e}38%{color:#7de89b}40%{color:#7de8a8}42%{color:#7de8b5}44%{color:#7de8c1}46%{color:#7de8ce}48%{color:#7de8db}50%{color:#7de8e8}52%{color:#7ddbe8}54%{color:#7dcee8}56%{color:#7dc1e8}58%{color:#7db5e8}60%{color:#7da8e8}62%{color:#7d9be8}64%{color:#7d8ee8}66%{color:#7d81e8}68%{color:#867de8}70%{color:#927de8}72%{color:#9f7de8}74%{color:#ac7de8}76%{color:#b97de8}78%{color:#c67de8}80%{color:#d37de8}82%{color:#df7de8}84%{color:#e87de4}86%{color:#e87dd7}88%{color:#e87dca}90%{color:#e87dbd}92%{color:#e87db0}94%{color:#e87da4}96%{color:#e87d97}98%{color:#e87d8a}100%{color:#e87d7d}}.rainbow-text{animation:rainbow-text 5s infinite}
 </style>
 </head>
 
@@ -400,6 +243,8 @@ document.getElementById("demo").innerHTML += rollDie();
 			});
 		})
 	</script>
+<h2 class="box rainbow-text" id="demo" style="font-family: Montserrat; font-size: 50px; top: 10; left: 100; text-shadow: 1px 1px 0px, 0px 1px 0px, 1px 0px 1px, 0px 0px 1px, black;">Онлайн на сайте:&nbsp;</h2>
+<script>let nb_stops=10,dir="left";function SetupRainbow(){var e=GetRainbowString(nb_stops,80,50),t=".rainbowText {                 -webkit-background-clip: text;                 -webkit-text-fill-color: transparent;                 background-image: -webkit-linear-gradient("+dir+","+e+");                  background-image: linear-gradient(to "+("left"===dir?"right":"right"===dir?"left":"top"===dir?"bottom":"top")+","+e+")              }",n=document.createElement("style");n.type="text/css",n.styleSheet?n.styleSheet.cssText=t:n.appendChild(document.createTextNode(t)),document.head.appendChild(n)}function GetRainbowString(e,t,n){let r=360/e,i=[];for(let o=0;o<e;o++)i.push("hsl("+o*r+","+t+"%,"+n+"%)");return i.join()}function generateRainbowText(e){var t=e.innerText;e.innerHTML="";for(let n=0;n<t.length;n++){let r=document.createElement("span");r.style.color="hsl("+360*n/t.length+",80%,50%)",r.innerHTML=t[n],e.appendChild(r)}}function getRandomizer(e,t){return function(){return Math.floor(Math.random()*(1+t-e))+e}}window.addEventListener("load",function(){SetupRainbow()}),window.addEventListener("load",function(){var e=document.getElementsByClassName("rainbowText");for(let t=0;t<e.length;t++)generateRainbowText(e[t])});for(var rollDie=getRandomizer(100,200),results="",i=0;i<1e3;i++)results+=rollDie()+" ";document.getElementById("demo").innerHTML+=rollDie();
 
 </body>
 
